# pyDiMSum

./: .gitignore  README.md  pyproject.toml
pydimsum/: __init__.py  cli.py  config.py  pipeline.py
pydimsum/io/: __init__.py  counts.py  designs.py
pydimsum/report/: html.py  plots.py
pydimsum/report/templates/: report.html.j2
pydimsum/steam/: __init__.py  aggregate.py  error_model.py  fitness.py  growth_rates.py  library.py  merge.py  merge_fitness.py  mutations.py  process_variants.py  sequences.py
pydimsum/wrap/: __init__.py  align.py  demultiplex.py  fastqc.py  tally.py  trim.py
tests/: test_barcodes.py  test_config.py  test_error_model.py  test_growth_rates.py  test_library.py  test_process_variants.py  test_report.py  test_sequences.py  test_steam_end_to_end.py  test_wrap.py
tests/data/reference/: fitness_doubles.txt  fitness_singles.txt  fitness_singles_MaveDB.csv  fitness_synonymous.txt  fitness_wildtype.txt
